# Flask-Casbin

./: .flake8  .pre-commit-config.yaml  .travis.yml  README.md  pyproject.toml  tox.ini
flask_casbin/: __init__.py  adapter.py  manager.py  utils.py
tests/: __init__.py  conftest.py  policy.csv  test_acl.py
